# MemoryEditor

./: .gitignore  CMakeLists.txt  License.txt  MemoryEditor  MemoryEditorConfig.h  MemoryEditorConfig.h.in  README.md  install.sh  memoryEditor.cpp
.github/workflows/: cmake.yaml
MemoryFunctions/: CMakeLists.txt  MemoryFunctions.hpp  ReadingMemory.cpp  WritingMemory.cpp
src/: MemoryEditor.cpp
tutorial/: dummyprogram.cpp
